# asr-theory-of-speculation

./: AUTHORS.md  CHANGELOG.md  CHANGE_SUMMARY.md  CITATION.cff  LICENSE  README.md  README_REVISION.md  REPRODUCIBILITY.md  pyproject.toml  requirements-lock.txt  requirements.txt
.docs/: README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish-pypi.yml  python-app.yml  python-ci.yml  python-cy.yml
notebooks/: bachelier_theory_of_speculation_reproduction.ipynb  bachelier_theory_of_speculation_reproduction_package.ipynb
paper/: README.md  bachelier_paper_corrige.tex  main  main.tex  references.bib
src/: brownian_motion.py  option_pricing.py
src/asr/models/bachelier/: __init__.py  brownian_motion.py  pricing.py  process.py  simulation.py
tests/: conftest.py  test_brownian_motion.py  test_option_pricing.py  test_package_imports.py
