[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-theory-of-speculation"
version = "1.0.0"
description = "Installable Python package and reproducible research implementation of Bachelier's 1900 Theory of Speculation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Alpha Kabinet TOURE", email = "research@asr-lab.online" }
]

maintainers = [
    { name = "Alpha Stochastic Research", email = "research@asr-lab.online" }
]

keywords = [
    "bachelier",
    "theory-of-speculation",
    "quantitative-finance",
    "financial-mathematics",
    "stochastic-processes",
    "brownian-motion",
    "option-pricing",
    "monte-carlo-simulation",
    "reproducible-research",
    "open-science"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pandas>=2.0",
    "jupyter>=1.0",
    "notebook>=7.0"
]

notebook = [
    "pandas>=2.0",
    "jupyter>=1.0",
    "notebook>=7.0"
]

[project.urls]
Homepage = "https://asr-lab.online"
Repository = "https://github.com/Alpha-Stochastic-Research/asr-theory-of-speculation"
Issues = "https://github.com/Alpha-Stochastic-Research/asr-theory-of-speculation/issues"
Organization = "https://github.com/Alpha-Stochastic-Research"

[tool.setuptools.packages.find]
where = ["src"]
include = ["asr*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
